udating the HW a bit

--- a/04-Pandas/Instructions/HeroesOfPymoli/Examples_for_Pandas_HW.ipynb
+++ b/04-Pandas/Instructions/HeroesOfPymoli/Examples_for_Pandas_HW.ipynb
@@ -20,6 +20,30 @@
     "data_file_pd[[\"Amount\", \"Gender\"]].head()\n",
     "\n",
     "\n",
+    "## can use df.axes to get the tuple with row and column indexes and then use len() function:\n",
+    "total_rows=len(df.axes[0])\n",
+    "total_cols=len(df.axes[1])\n",
+    "\n",
+    "\n",
+    "##   Row Count of a Series: len(s), s.size, len(s.index)\n",
+    "len(s)\n",
+    "# 5\n",
+    "s.size\n",
+    "# 5\n",
+    "len(s.index)\n",
+    "# 5\n",
+    "\n",
+    "\n",
+    "# The unique method shows every element of the series that appears only once\n",
+    "unique = data_file_pd[\"Last Name\"].unique()\n",
+    "unique\n",
+    "\n",
+    "# The value_counts method counts unique values in a column\n",
+    "count = data_file_pd[\"Gender\"].value_counts()\n",
+    "count\n",
+    "\n",
+    "\n",
+    "\n",
     "# CALCULATE STATS\n",
     "# The mean method averages the series\n",
     "average = data_file_pd[\"Amount\"].mean()\n",
