--- a/04-Pandas/Instructions/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/04-Pandas/Instructions/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -159,46 +159,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total number of unique players is: \n"
+     ]
+    },
+    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Total Players</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>576</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Total Players\n",
-       "0            576"
+       "576"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(\"The total number of unique players is: \")\n",
+    "count_unique_SN = purchase_data[\"SN\"].value_counts()\n",
+    "count_unique_SN\n",
+    "# print(len(count_unique_SN))\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "total = data_file_pd[\"Amount\"].sum()\n",
-    "total\n",
+    "summarydf1 = len(count_unique_SN)\n",
+    "summarydf1\n",
     "\n"
    ]
   },
@@ -227,61 +216,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Number of Unique Items</th>\n",
-       "      <th>Average Price</th>\n",
-       "      <th>Number of Purchases</th>\n",
-       "      <th>Total Revenue</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>183</td>\n",
-       "      <td>$3.05</td>\n",
-       "      <td>780</td>\n",
-       "      <td>$2,379.77</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Number of Unique Items Average Price Number of Purchases Total Revenue\n",
-       "0                     183         $3.05                 780     $2,379.77"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of unique items is: \n",
+      "179\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "# # Need:\n",
+    "# Number of Unique Items\n",
+    "# Average Price\n",
+    "# Number of Purchases\n",
+    "# Total Revenue\n",
+    "\n",
+    "\n",
+    "# Number of Unique Items\n",
+    "count_unique_items = purchase_data[\"Item Name\"].value_counts()\n",
+    "# sum_count_unique_items = count_unique_items.sum()\n",
+    "# print(sum_count_unique_items)\n",
+    "# average_price = purchase_data[\"Price\"].mean()\n",
+    "count_unique_items\n",
+    "print(\"The number of unique items is: \")\n",
+    "print(len(count_unique_items))\n",
+    "# the notes in the instructions say \"183\", a higher number than I found, 179\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Average Price\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "count_unique_SN = purchase_data[\"SN\"].value_counts()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# # Various Indexing Methods that return the same result\n",
+    "# summary1 = df.iloc[:,-2:].describe()\n",
+    "# summary2 = df.loc[:,['Weight',\"Membership(Days)\"]].describe()\n",
+    "# summary3 = df[['Weight',\"Membership(Days)\"]].describe()\n",
+    "\n",
+    "# summary1.head();summary2.head();summary3.head()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
